@@ -6,6 +6,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+DG-2011-04-04-2: Cleanup:    changed severe to config error when nfs4 is not 
+                             configured
+                 Review:     SH
+
 DG-2011-04-04-1: Cleanup:    test 3068 throws config error instead of severe, 
                              when no Solaris host is in testsuite
                  Review:     JG
